# prisma-engines

./: Cargo.toml
.github/workflows/: query-engine.yml
introspection-engine/connectors/sql-introspection-connector/: Cargo.toml
introspection-engine/connectors/sql-introspection-connector/src/: lib.rs  rendering.rs  schema_describer_loading.rs  version_checker.rs
introspection-engine/connectors/sql-introspection-connector/src/pair/: default.rs  id.rs  index.rs  index_field.rs
introspection-engine/connectors/sql-introspection-connector/src/rendering/: configuration.rs  defaults.rs
introspection-engine/core/: Cargo.toml
introspection-engine/introspection-engine-tests/: Cargo.toml
libs/datamodel/connectors/dml/: Cargo.toml
libs/datamodel/connectors/sql-datamodel-connector/: Cargo.toml
libs/datamodel/connectors/sql-datamodel-connector/src/: sqlite_datamodel_connector.rs
libs/datamodel/core/: Cargo.toml
libs/datamodel/core/src/: lib.rs
libs/datamodel/core/src/validate/: datasource_loader.rs
libs/dml/src/: default_value.rs
libs/prisma-value/: Cargo.toml
libs/sql-ddl/: Cargo.toml
libs/sql-ddl/src/: lib.rs
libs/sql-schema-describer/: Cargo.toml
libs/sql-schema-describer/src/: lib.rs
libs/test-cli/: Cargo.toml
libs/test-setup/: Cargo.toml
libs/user-facing-errors/: Cargo.toml
libs/user-facing-errors/src/: lib.rs  quaint.rs
migration-engine/cli/: Cargo.toml
migration-engine/connectors/sql-migration-connector/: Cargo.toml
migration-engine/connectors/sql-migration-connector/src/: apply_migration.rs  flavour.rs  lib.rs  sql_migration.rs  sql_renderer.rs
migration-engine/connectors/sql-migration-connector/src/sql_destructive_change_checker/: destructive_change_checker_flavour.rs
migration-engine/connectors/sql-migration-connector/src/sql_schema_calculator/: sql_schema_calculator_flavour.rs
migration-engine/connectors/sql-migration-connector/src/sql_schema_differ/: differ_database.rs  sql_schema_differ_flavour.rs
migration-engine/core/: Cargo.toml
migration-engine/core/src/: lib.rs  state.rs
migration-engine/migration-engine-tests/: Cargo.toml
migration-engine/qe-setup/: Cargo.toml
psl/builtin-connectors/: Cargo.toml
psl/builtin-connectors/src/: sqlite_datamodel_connector.rs
psl/parser-database/src/: types.rs
psl/psl/: Cargo.toml
quaint/: Cargo.toml
quaint/src/ast/function/: uuid.rs
query-engine/connector-test-kit-rs/qe-setup/: Cargo.toml
query-engine/connector-test-kit-rs/qe-setup/src/: cockroachdb.rs  postgres.rs
query-engine/connectors/mongodb-query-connector/: Cargo.toml
query-engine/connectors/query-connector/: Cargo.toml
query-engine/connectors/query-connector/src/: error.rs
query-engine/connectors/sql-query-connector/: Cargo.toml
query-engine/connectors/sql-query-connector/src/: context.rs  filter_conversion.rs  lib.rs  ordering.rs  sql_info.rs
query-engine/connectors/sql-query-connector/src/database/: connection.rs  mod.rs  postgresql.rs  transaction.rs
query-engine/connectors/sql-query-connector/src/query_builder/: write.rs
query-engine/core/: Cargo.toml
query-engine/core/src/executor/: loader.rs
query-engine/dml/src/: default_value.rs
query-engine/dmmf/src/: lib.rs
query-engine/prisma-models/: Cargo.toml
query-engine/query-engine/: Cargo.toml
query-engine/query-engine-node-api/: Cargo.toml
query-engine/request-handlers/: Cargo.toml
query-engine/request-handlers/src/: load_executor.rs
schema-engine/connectors/schema-connector/: Cargo.toml
schema-engine/connectors/sql-schema-connector/: Cargo.toml
schema-engine/connectors/sql-schema-connector/src/: flavour.rs  lib.rs  sql_migration.rs  sql_renderer.rs  version_checker.rs
schema-engine/connectors/sql-schema-connector/src/introspection/: rendering.rs
schema-engine/core/: Cargo.toml
schema-engine/core/src/: lib.rs  state.rs
schema-engine/sql-introspection-tests/: Cargo.toml
schema-engine/sql-migration-tests/: Cargo.toml
schema-engine/sql-schema-describer/: Cargo.toml
schema-engine/sql-schema-describer/src/: getters.rs  lib.rs
(+15 files in other folders)
