[package]
authors = ["Arve Knudsen <arve.knudsen@gmail.com>"]
edition = "2021"
name = "sql-schema-describer"
version = "0.1.0"

[features]
mysql = ["quaint/mysql", "barrel/mysql"]
sqlite = ["quaint/sqlite", "barrel/sqlite3"]
mssql = ["quaint/mssql", "barrel/mssql"]
postgresql = ["quaint/postgresql", "barrel/pg"]

[dependencies]
native-types = { path = "../native-types" }
prisma-value = { path = "../prisma-value" }

async-trait = "0.1.17"
bigdecimal = "0.2"
enumflags2 = "0.7"
indexmap = { version = "1.9.1", default_features = false }
indoc = "1"
once_cell = "1.3"
regex = "1.2"
serde = "1"
serde_json = "1.0"
tracing = "0.1"
tracing-error = "0.2"
tracing-futures = "0.2"

[dependencies.quaint]
git = "https://github.com/prisma/quaint"
rev = "fb4fe90682b4fecb485fd0d6975dd15a3bc9616b"
features = ["expose-drivers", "chrono", "bigdecimal"]

[dev-dependencies]
barrel = { git = "https://github.com/prisma/barrel.git", rev = "4e84cf3d5013b4c92eb81d7ba90cd1c1c01c6805" }
expect-test = "1.2.2"
pretty_assertions = "0.6"
test-macros = { path = "../test-macros" }
test-setup = { path = "../test-setup" }
tokio = { version = "1.0", default_features = false }
