[package]
name = "user-facing-errors"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2021"

[dependencies]
user-facing-error-macros = { path = "../user-facing-error-macros" }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde = { version = "1.0.102", features = ["derive"] }
backtrace = "0.3.40"
tracing = "0.1"
indoc = "1"

[dependencies.quaint]
git = "https://github.com/prisma/quaint"
rev = "fb4fe90682b4fecb485fd0d6975dd15a3bc9616b"
optional = true

[features]
sql = ["quaint"]
mysql = ["quaint/mysql"]
sqlite = ["quaint/sqlite"]
postgresql = ["quaint/postgresql"]
mssql = ["quaint/mssql"]
default = []
