[package]
name = "qe-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
datamodel = { path = "../../libs/datamodel/core" }
mongodb-client = { path = "../../libs/mongodb-client" }
migration-core = { path = "../core" }

async-trait = "0.1.52"
connection-string = "*"
enumflags2 = "*"
mongodb = "2.1.0"
tempfile = "3.3.0"
url = "2"

[dependencies.quaint]
git = "https://github.com/prisma/quaint"
rev = "479e08a41b13902028906bc05f778688c06a3f18"
features = [
    "sqlite",
    "postgresql",
    "mysql",
    "mssql",
]
