[package]
edition = "2021"
name = "sql-migration-connector"
version = "0.1.0"

[features]
mysql = [
  "quaint/mysql",
  "user-facing-errors/mysql",
  "sql-ddl/mysql",
  "sql-schema-describer/mysql",
]
sqlite = [
  "quaint/sqlite",
  "user-facing-errors/sqlite",
  "sql-ddl/sqlite",
  "sql-schema-describer/sqlite",
]
mssql = [
  "quaint/mssql",
  "user-facing-errors/mssql",
  "sql-ddl/mssql",
  "sql-schema-describer/mssql",
]
postgresql = [
  "quaint/postgresql",
  "user-facing-errors/postgresql",
  "sql-ddl/postgresql",
  "sql-schema-describer/postgresql",
]

[dependencies]
datamodel = { path = "../../../libs/datamodel/core", features = ["sql"] }
migration-connector = { path = "../migration-connector" }
native-types = { path = "../../../libs/native-types" }
sql-schema-describer = { path = "../../../libs/sql-schema-describer" }
sql-ddl = { path = "../../../libs/sql-ddl" }
user-facing-errors = { path = "../../../libs/user-facing-errors", features = [
  "sql",
] }

chrono = { version = "0.4" }
connection-string = "0.1.10"
enumflags2 = "0.7.1"
indoc = "1.0"
once_cell = "1.3"
regex = "1"
serde_json = { version = "1.0" }
tokio = { version = "1.0", default-features = false, features = ["time"] }
tracing = "0.1"
tracing-futures = "0.2"
url = "2.1.1"
uuid = { version = "0.8", features = ["v4"] }
either = "1.6"

[dependencies.quaint]
git = "https://github.com/prisma/quaint"
rev = "fb4fe90682b4fecb485fd0d6975dd15a3bc9616b"
features = ["json", "uuid", "chrono", "bigdecimal", "expose-drivers"]
